# cc_projects

./: .gitignore  CLAUDE.md  README.md  bash.exe.stackdump
autonomous-agent-template/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
autonomous-agent-template/.claude/: settings.json
autonomous-agent-template/.claude/agents/: automation-assistant.md  credential-guardian.md  llm-integration-expert.md  rust-extension-advisor.md  scheduler-expert.md  task-architect.md
autonomous-agent-template/.claude/commands/: add-credential.md  build-extension.md  list-credentials.md  list-tasks.md  llm-chat.md  prod-check.md  run-task.md  run.md  schedule-task.md  status.md  stop.md  test.md  ui.md
autonomous-agent-template/rust_ext/: Cargo.toml
autonomous-agent-template/rust_ext/src/: lib.rs
autonomous-agent-template/src/agent/: __init__.py  cli.py  config.py  daemon.py
autonomous-agent-template/tests/: conftest.py  test_credentials.py  test_llm_client.py  test_rust_ext.py  test_scheduler.py  test_tasks.py
fastapi-template/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fastapi-template/.claude/commands/: dev.md  test.md
fastapi-template/app/: main.py
fastapi-template/app/api/: deps.py
fastapi-template/app/core/: __init__.py  config.py  database.py  security.py
fastapi-template/app/models/: user.py
fastapi-template/app/repositories/: __init__.py  base.py  user_repository.py
fastapi-template/app/schemas/: __init__.py  token.py  user.py
fastapi-template/app/services/: auth_service.py  user_service.py
fastapi-template/migrations/: env.py
fastapi-template/tests/: conftest.py
fastapi-template/tests/test_api/: test_auth.py  test_users.py
flask-template/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
flask-template/.claude/: settings.json
flask-template/.claude/agents/: api-optimizer.md  blueprint-architect.md  flask-security.md  migration-assistant.md  schema-expert.md  test-generator.md
flask-template/.claude/commands/: create-blueprint.md  create-model.md  create-schema.md  db-downgrade.md  db-migrate.md  db-status.md  db-upgrade.md  routes.md  run.md  shell.md  test.md
flask-template/app/: __init__.py  config.py  extensions.py
flask-template/app/api/: __init__.py  auth.py  resources.py  users.py
flask-template/app/models/: __init__.py  user.py
flask-template/app/schemas/: __init__.py  user.py
flask-template/app/services/: __init__.py  auth_service.py  user_service.py
flask-template/app/utils/: __init__.py  decorators.py  validators.py
flask-template/tests/: __init__.py  conftest.py  test_api.py  test_models.py
quart-template/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TEMPLATE_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  setup_instructions.md
quart-template/.claude/: settings.json
quart-template/.claude/agents/: api-optimizer.md  async-security-reviewer.md  database-assistant.md  database-expert.md  deployment-advisor.md  quart-api-expert.md  quart-expert.md  quart-security.md  test-generator.md  websocket-expert.md  websocket-helper.md
quart-template/.claude/commands/: coverage.md  create-blueprint.md  create-model.md  create-route.md  create-websocket.md  db-migrate.md  db-status.md  db-upgrade.md  dev.md  format.md  generate-docs.md  lint.md  prod-check.md  shell.md  test.md  type-check.md
quart-template/src/app/: __init__.py  auth.py  config.py
quart-template/tests/: conftest.py  test_api.py  test_routes.py
scrapy-template/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup_instructions.md
scrapy-template/.claude/: settings.json
scrapy-template/.claude/agents/: deployment-helper.md  performance-tuner.md  pipeline-expert.md  security-advisor.md  spider-dev.md  testing-assistant.md
scrapy-template/.claude/commands/: benchmark.md  check-robots.md  create-spider.md  deploy.md  export-data.md  list-spiders.md  run-spider.md  shell.md  test-spider.md  validate-items.md
scrapy-template/.claude/skills/: README.md
scrapy-template/myproject/: __init__.py  items.py  loaders.py  middlewares.py  pipelines.py  settings.py
scrapy-template/myproject/spiders/: example_basic.py  example_crawl.py  example_playwright.py
scrapy-template/myproject/utils/: __init__.py  helpers.py
scrapy-template/tests/: __init__.py  conftest.py
scrapy-template/tests/test_pipelines/: test_validation.py
scrapy-template/tests/test_spiders/: __init__.py  test_example_basic.py
tkinter-template/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_instructions.md
tkinter-template/.claude/agents/: gui-security.md  performance-optimizer.md  test-helper.md  threading-expert.md  tkinter-expert.md
tkinter-template/.claude/commands/: build.md  dev.md  format.md  lint.md  new-dialog.md  new-model.md  new-view.md  test.md  type-check.md  validate-form.md
tkinter-template/scripts/: build.py
tkinter-template/src/tkinter_app/: __init__.py  __main__.py  app.py
tkinter-template/tests/: conftest.py  test_controllers.py  test_gui.py  test_models.py
whisper-transcriber-template/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
whisper-transcriber-template/.claude/: settings.json
whisper-transcriber-template/.claude/agents/: audio-processor.md  audio-recorder.md  batch-processor.md  model-selector.md  output-formatter.md  transcription-optimizer.md
whisper-transcriber-template/.claude/commands/: clean.md  convert-format.md  extract-audio.md  format.md  lint.md  list-devices.md  list-models.md  record.md  run.md  setup.md  test.md  (+2 more)
whisper-transcriber-template/src/: __init__.py  audio_extractor.py  audio_recorder.py  cli.py  formatter.py  transcriber.py
whisper-transcriber-template/tests/: test_audio_recorder.py  test_transcriber.py
(+92 files in other folders)
