[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-agent"
version = "0.1.0"
description = "Autonomous task automation platform — scheduled jobs, encrypted credentials, OS automation, LLM chat"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "apscheduler>=3.10.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.26.0",
  "tenacity>=8.2.0",
  "cryptography>=42.0.0",
  "openai>=1.12.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "psutil>=5.9.0",
  "pyautogui>=0.9.54",
  "plyer>=2.1.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "maturin>=1.12",
  "httpx",
]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]

[project.scripts]
agent = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
