[package]
name = "agent-core-ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
sha2 = "0.10"
hex = "0.4"
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
